# rootcause-windows-inspector

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  check_out.txt  run_check.ps1  run_fmt.ps1  rustfmt.toml
.github/workflows/: ci.yml  deploy-landing.yml  release-windows.yml
distribution/demo/: LEEME-DEMO.txt  README_PUBLICA_DEMO.md
docs/: ARCHITECTURE.md  ARQUITECTURA_ESCALABILIDAD.md  ARQUITECTURA_EVOLUTIVA.md  BUILD_WINDOWS.md  CATALOGO_PRODUCTO.md  CI_GITHUB.md  COMMANDS.md  COMPARATIVA_OSS.md  DEMO_PUBLICA.md  DETECCION_AMENAZAS.md  GUIA_COMPETENCIA.md  GUIA_DE_USO_PREVIA.md  HEURISTICAS.md  INDEX.md  INSTALACION_TRANSPARENTE_DEMO.md  LICENCIA_Y_DECISION.md  LIMITACIONES_DEMO.md  MANUAL_PARA_NOVATOS.md  MANUAL_USUARIO.md  MARCA_Y_BRANDING_ROOTCAUSE.md  MODULO_DETECCION_ANOMALIAS.md  NOMBRES_PRODUCTO.md  OPERACION.md  PACKAGING_WINDOWS.md  PLAN_MAESTRO.md  POLITICA_DE_PRIVACIDAD_LOCAL.md  PRECISION_MODE_ETW.md  RECLUTADORES.md  RELEASE_CHECKLIST.md  REPOSITORIO_ANALISIS.md  REQUIREMENTS.md  ROADMAP.md  RUST_PARA_ROOTCAUSE.md  TESTING_WINDOWS.md  TRACE_SUMMARY_ETL.md  TROUBLESHOOTING.md
docs/requirements/: README.md  REQ-SEC-001-deteccion-comportamiento-anomalo.md  REQ-SEC-002-autoproteccion-y-resiliencia.md
landing/: README.md  index.html
landing/.github/workflows/: deploy.yml
landing/assets/: style.css
packaging/chocolatey/: rootcause.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1
packaging/distribution/scoop/: rootcause.json
packaging/distribution/winget/: rootcause.yaml
packaging/powershell/: RootCause.psm1
packaging/windows/: INFO_AFTER_DEMO.txt  INFO_BEFORE_DEMO.txt  RootCause-Demo.iss  RootCause.iss
scripts/: analyze-last-etl.bat  analyze-last-etl.ps1  build-release.bat  build-release.ps1  ci-local.ps1  clean.ps1  hash-artifacts.ps1  package-cli-portable.ps1  package-inno-demo.ps1  package-inno.ps1  package-portable.ps1  package-powershell-module.ps1  package-vscode-extension.ps1  quality-gates.ps1  release-product.ps1  release-product.sh  verify-environment.bat  verify-environment.ps1  wpa-open-latest.ps1  wpr-start-general.ps1  wpr-stop-general.ps1
src/: app.rs  cli.rs  config.rs  i18n.rs  main.rs  meta.rs  models.rs
src/services/: ai.rs  anomaly.rs  baseline.rs  docker.rs  etl.rs  inspector.rs  mod.rs  netscan.rs  network.rs  persistence.rs  report.rs  resilience.rs  rules.rs  temp_scan.rs  tray.rs  windows.rs
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
