[package]
build = "build.rs"
name = "rootcause-windows-inspector"
version = "0.17.0"
edition = "2024"
authors = ["Vladimir Acuña <vladimiracunadev-create>"]
description = "Monitor visual y forense ligero para detectar procesos, archivos temporales, conexiones y trazas ETW que degradan Windows."
license = "Apache-2.0"
repository = "https://github.com/vladimiracunadev-create/rootcause-windows-inspector"
publish = false

[[bin]]
name = "rootcause"
path = "src/main.rs"

# ── Ediciones del producto ──────────────────────────────────────────────────────
# Por defecto se compila con GUI completa.
# Para la edición CLI-only (~4 MB, sin egui):
#   cargo build --release --no-default-features
[features]
default = ["gui"]
# La edición GUI incluye el icono de bandeja (tray-icon). La edición CLI-only
# (--no-default-features) no lo compila.
gui = ["dep:eframe", "dep:egui", "dep:tray-icon"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eframe = { version = "0.27", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.27", optional = true }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.38", default-features = false, features = ["system", "network"] }
tray-icon = { version = "0.14", optional = true }
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"
